@@ -16,7 +16,9 @@ if "%OS%" == "Windows_NT" (
   set DIRNAME=.\
 )
 
+pushd "%DIRNAME%.."
 set "BASE_DIR=%CD%"
+popd
 
 rem Setup JBoss specific properties
 if "x%JAVA_HOME%" == "x" (
@@ -26,6 +28,24 @@ if "x%JAVA_HOME%" == "x" (
 ) else (
   set "JAVA=%JAVA_HOME%\bin\java"
 )
+
+rem set default modular jvm parameters
+setlocal EnableDelayedExpansion
+"%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set MODULAR_JDK=true) || (set MODULAR_JDK=false)
+if "!MODULAR_JDK!" == "true" (
+    echo "%JAVA_OPTS%" | findstr /I "\-\-add\-modules" > nul
+    if errorlevel == 1 (
+      rem Set default modular jdk options
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
+      set "DEFAULT_MODULAR_JVM_OPTIONS=!DEFAULT_MODULAR_JVM_OPTIONS! --add-modules=java.se"
+    ) else (
+      set "DEFAULT_MODULAR_JVM_OPTIONS="
+    )
+)
+set "JAVA_OPTS=!JAVA_OPTS! !DEFAULT_MODULAR_JVM_OPTIONS!"
+setlocal DisableDelayedExpansion
 
 set "JAVA_OPTS=%JAVA_OPTS% -Djboss.server.migration.baseDir=%BASE_DIR%"
 
